# mav

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  lychee.toml  typos.toml
.cargo/: ci-config.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: ci.yml
.mav/: debug.json  settings.json
assets/badge/: v0.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  initial.json  vim.json
assets/settings/: default.json  default_semantic_token_rules.json  initial_debug_tasks.json  initial_local_debug_tasks.json  initial_local_settings.json  initial_server_settings.json  initial_tasks.json  initial_user_settings.json
crates/acp_thread/: Cargo.toml
crates/acp_tools/: Cargo.toml
crates/action_log/: Cargo.toml
crates/activity_indicator/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent_servers/: Cargo.toml
crates/agent_settings/: Cargo.toml
crates/agent_skills/: Cargo.toml  README.md  agent_skills.rs
crates/agent_ui/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/anthropic/: Cargo.toml
crates/askpass/: Cargo.toml
crates/assets/: Cargo.toml
crates/audio/: Cargo.toml
crates/auto_update/: Cargo.toml
crates/auto_update_helper/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/aws_http_client/: Cargo.toml
crates/bedrock/: Cargo.toml
crates/benchmarks/: Cargo.toml
crates/breadcrumbs/: Cargo.toml
crates/breadcrumbs/src/: breadcrumbs.rs
crates/buffer_diff/: Cargo.toml
crates/call/: Cargo.toml
crates/channel/: Cargo.toml
crates/cli/: Cargo.toml  README.md  build.rs
crates/client/: Cargo.toml
crates/clock/: Cargo.toml
crates/cloud_api_client/: Cargo.toml
crates/cloud_api_types/: Cargo.toml
crates/codestral/: Cargo.toml
crates/codestral/src/: codestral.rs
crates/component/: Cargo.toml
crates/credentials_provider/: Cargo.toml
crates/debug_adapter_extension/: Cargo.toml
crates/debug_adapter_extension/src/: extension_dap_adapter.rs
crates/eval_cli/mav_eval/: README.md  agent.py  agent_common.py  agent_setup.py  benchmarks.py  builds.py  cli.py  common.py  config.py  harness_command.py  interactive.py  judge_proxy.py  launch.py  launch_execution.py  launch_rejudge.py  modal_app.py  pier_agent.py  pyproject.toml  rejudge.py  report.py  source.py  verifier.py
crates/eval_cli/mav_eval/tests/: test_agent_common.py  test_baseline.py  test_benchmarks.py  test_cleanup.py  test_launch.py  test_rejudge.py  test_report.py  test_run_index.py  test_source.py
crates/eval_utils/: Cargo.toml
crates/extension_api/: Cargo.toml  PENDING_CHANGES.md  README.md
crates/extension_api/src/: extension_api.rs  http_client.rs  process.rs  settings.rs
crates/extension_api/src/extension_api/: component.rs
crates/extension_api/wit/since_v0.0.1/: extension.wit
crates/extension_api/wit/since_v0.0.4/: extension.wit
crates/extension_api/wit/since_v0.0.6/: extension.wit
crates/extension_api/wit/since_v0.1.0/: extension.wit  nodejs.wit
crates/extension_api/wit/since_v0.2.0/: extension.wit
crates/extension_api/wit/since_v0.3.0/: extension.wit
crates/extension_api/wit/since_v0.4.0/: extension.wit
crates/extension_api/wit/since_v0.5.0/: extension.wit  github.wit
crates/extension_api/wit/since_v0.6.0/: dap.wit  extension.wit
crates/extension_api/wit/since_v0.8.0/: dap.wit  extension.wit  github.wit
crates/feature_flags_macros/: Cargo.toml
crates/feedback/: Cargo.toml
crates/feedback/src/: feedback.rs
crates/file_icons/: Cargo.toml
crates/gpui_tokio/: Cargo.toml
crates/language_onboarding/: Cargo.toml
crates/language_onboarding/src/: python.rs
crates/mav_credentials_provider/: Cargo.toml
crates/mav_credentials_provider/src/: mav_credentials_provider.rs
crates/net/: Cargo.toml
crates/oauth_callback_server/: Cargo.toml
crates/oauth_callback_server/src/: oauth_callback_server.rs
crates/paths/: Cargo.toml
crates/paths/src/: paths.rs
crates/paths/src/paths/: base_dirs.rs  editor_imports.rs
crates/platform_title_bar/: Cargo.toml
crates/platform_title_bar/src/: platform_title_bar.rs  system_window_tabs.rs
crates/platform_title_bar/src/system_window_tabs/: dragged_tab.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: ai.proto  app.proto  buf.yaml  buffer.proto  call.proto  channel.proto  core.proto  debugger.proto  download.proto  git.proto  image.proto  lsp.proto  mav.proto  notification.proto  task.proto  toolchain.proto  worktree.proto
crates/proto/src/: proto.rs
crates/refineable/: Cargo.toml
crates/refineable/derive_refineable/: Cargo.toml
crates/refineable/derive_refineable/src/: derive_refineable.rs  fields.rs
crates/settings_macros/: Cargo.toml
crates/svg_preview/: Cargo.toml
crates/svg_preview/src/: svg_preview.rs
crates/theme_extension/: Cargo.toml
crates/time_format/: Cargo.toml
crates/ui_input/: Cargo.toml
crates/util_macros/: Cargo.toml
crates/zlog/: Cargo.toml  README.md
crates/zlog/src/: filter.rs  zlog.rs
crates/zlog/src/filter/: tests.rs
crates/zlog_settings/: Cargo.toml
docs/: README.md  architecture.md  ci.md  development.md  extensions.md  getting-started.md  nix-and-flox.md  project-panel-undo.md  releasing.md  testing.md
extensions/: README.md
extensions/test-extension/: Cargo.toml  extension.toml
extensions/test-extension/src/: test_extension.rs
nix/: build.nix
script/: build-docker  bump-extension-cli  bump-mav-version  bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  cargo  cargo-timing-info.js  check-file-lines  collab-flamegraph  crate-dep-graph  debug-cli  determine-release-channel  determine-release-channel.ps1  file-line-baseline.tsv  generate-action-metadata  get-released-version  install-linux  install.sh  mav-local  new-crate  prettier  prompts  randomized-test-ci  reset_db  run-background-agent-mvp-local  setup-dev-driver.ps1  setup-sccache  setup-sccache.ps1  snap-build  snap-try  uninstall.sh  upload-extension-cli  verify-macos-document-icon
(+4966 files in other folders)
