[package]
name = "codestral"
version = "0.1.0"
edition = "2021"
publish = false
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lib]
path = "src/codestral.rs"

[dependencies]
anyhow.workspace = true
edit_prediction_types.workspace = true
edit_prediction.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
icons.workspace = true
language.workspace = true
language_model.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
text.workspace = true
mav_credentials_provider.workspace = true
zeta_prompt.workspace = true

[dev-dependencies]
