[package]
name = "credentials_provider"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/credentials_provider.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
serde.workspace = true
