[package]
name = "eval_utils"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/eval_utils.rs"
doctest = false

[dependencies]
gpui_platform.workspace = true
serde.workspace = true
smol.workspace = true
