[package]
name = "mav_extension_api"
version = "0.8.0"
description = "APIs for creating Mav extensions in Rust"
repository = "https://github.com/dotbrains/mav"
documentation = "https://docs.rs/mav_extension_api"
keywords = ["mav", "extension"]
edition.workspace = true
# Change back to `true` when we're ready to publish v0.8.0.
publish = false
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/extension_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.41"

[package.metadata.component]
target = { path = "wit" }
