[package]
name = "feedback"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/feedback.rs"

[features]
test-support = []

[dependencies]
extension_host.workspace = true
gpui.workspace = true
system_specs.workspace = true
urlencoding.workspace = true
util.workspace = true
workspace.workspace = true
mav_actions.workspace = true
client.workspace = true
