[package]
name = "gpui_tokio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/gpui_tokio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_util.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
