[package]
name = "mav_credentials_provider"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/mav_credentials_provider.rs"

[dependencies]
anyhow.workspace = true
credentials_provider.workspace = true
futures.workspace = true
gpui.workspace = true
paths.workspace = true
release_channel.workspace = true
serde.workspace = true
serde_json.workspace = true
