[package]
name = "paths"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/paths.rs"

[dependencies]
const_format.workspace = true
dirs.workspace = true
ignore.workspace = true
util.workspace = true
