[package]
name = "platform_title_bar"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/platform_title_bar.rs"
doctest = false

[dependencies]
gpui.workspace = true
project.workspace = true
settings.workspace = true
smallvec.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
workspace.workspace = true
mav_actions.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
