[package]
description = "Shared protocol for communication between the Zed app and the zed.dev server"
edition.workspace = true
name = "proto"
version = "0.1.0"
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[features]
test-support = []

[lints]
workspace = true

[lib]
path = "src/proto.rs"
doctest = false

[dependencies]
anyhow.workspace = true
prost.workspace = true
serde.workspace = true

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
