[package]
name = "svg_preview"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/svg_preview.rs"

[dependencies]
multi_buffer.workspace = true
file_icons.workspace = true
gpui.workspace = true
language.workspace = true
ui.workspace = true
workspace.workspace = true
mav_actions.workspace = true
