[package]
name = "theme_extension"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/theme_extension.rs"

[dependencies]
anyhow.workspace = true
extension.workspace = true
fs.workspace = true
gpui.workspace = true
theme.workspace = true
theme_settings.workspace = true
