[package]
name = "time_format"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/time_format.rs"
doctest = false

[dependencies]
sys-locale.workspace = true
time.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-foundation-sys.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
