[package]
name = "ui_input"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/ui_input.rs"

[dependencies]
component.workspace = true
gpui.workspace = true
ui.workspace = true

[features]
default = []
