[package]
name = "zlog"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/zlog.rs"

[features]
default = []

[dependencies]
collections.workspace = true
chrono.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
