[package]
name = "zlog_settings"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/zlog_settings.rs"

[features]
default = []

[dependencies]
gpui.workspace = true
collections.workspace = true
settings.workspace = true
zlog.workspace = true
