[package]
name = "mav_test_extension"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "LicenseRef-PolyForm-Shield-1.0.0"

[lints]
workspace = true

[lib]
path = "src/test_extension.rs"
crate-type = ["cdylib"]

[dependencies]
mav_extension_api = { path = "../../crates/extension_api" }
