[project]
name = "mav-eval"
version = "0.2.0"
description = "Harbor agent wrapper and remote orchestration CLI for Mav's eval-cli"
requires-python = ">=3.12"
dependencies = ["harbor==0.15.0", "modal==1.5.0"]

[project.scripts]
mav-eval = "mav_eval.cli:main"

[tool.setuptools]
packages = ["mav_eval"]
package-dir = { mav_eval = "." }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
